# sw_scan

./: .gitignore  README.md  blast.py  blast_scan.py  blast_scan.ui  blast_scan_ui.py  clustal_cleaner.py  clustal_cleaner2.py  download_ena_http.py  embl2fasta  fasta2onerow.py  fasta2onerow_gisaid_short.py  gisaid_provision-json.py  pyproject.toml  results.tsv  results_fbs.tsv  sw  sw.py  sw2  sw_mono  sw_mp.py  sw_mp_mem.py  sw_scan.py  sw_scan.ui  sw_scan_sql.py  sw_scan_sql.ui  sw_scan_ui.py  sw_sql  sw_tsv  test_sw_mp.py
src/: blast.py  clustal_cleaner.py  download_ena_http.py  fasta2onerow_gisaid.py  fasta2onerow_gisaid_short.py  fetch_info.py  fetch_info_thread.py  gisaid_provision-json.py  sw  sw_scan.py  sw_scan.ui  sw_scan_ui.py
