[project]
name = "sw_scan"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Olivier Friard", email = "olivier.friard@unito.it" }
]
dependencies = [
    "pandas>=2.2.1",
    "scikit-bio==0.7.1",
    "biopython>=1.83",
]
readme = "README.md"
requires-python = ">=3.11"

